# textbin-axum

./: .dockerignore  Cargo.toml  Dockerfile  README.md
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/controllers/: controllers.rs  mod.rs  utils.rs
src/dblogic/: db.rs
src/entities/: mod.rs  paste.rs  prelude.rs
src/graphql/: controllers.rs  latest.rs  mod.rs
