[package]
edition = "2021"
name = "textbin-axum"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
http = "0.2.8"
rand = "0.8.5"
reqwest = "0.11.13"
sea-orm = {version = "^0.9.0", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros"]}
serde = "1.0.151"
serde_json = "1.0.91"
tokio = {version = "1.23.0", features = ["full"]}
tower-http = {version = "0.3.5", features = ["cors"]}
uuid = {version = "1.2.2", features = ["v4", "fast-rng"]}

env_logger = "0.9.0"
log = "0.4.14"
